Added Model.  Add Mirage

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -2,6 +2,10 @@
 
 <p>This is index.hbs.  We hope you find exactly what you're looking for in a place to stay.</p>
 
+{{#each model as |rentalUnit|}}
+  {{rental-listing rental=rentalUnit}}
+{{/each}}
+
 {{#link-to "about"}}About{{/link-to}}
 {{#link-to "contact"}}Click here to contact us.{{/link-to}}
 {{outlet}}
